# phileas

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: design.md  vision.md
docs/: 2026-03-30-recall-improvements-design.md  2026-04-02-session-ingestion-design.md  cli-reference.md  configuration.md  design-v2.md  design.md  llm-setup.md  long-term-memory-research.md  mcp-integration.md  quickstart.md  reflection-distillation-research.md  relationship-dynamics-design.md  relationship-dynamics-research.md  vision.md
docs/phileas/ingest-eval/: 01-gold-set.md  02-eval-harness.md  03-iteration.md  04-recall-graph-eval.md  05-recall-iteration.md  README.md
docs/plans/: 2026-03-25-phileas-redesign.md
docs/superpowers/plans/: 2026-04-03-phileas-public-release.md  2026-04-17-phileas-stats.md
docs/superpowers/specs/: 2026-04-03-phileas-public-release-design.md  2026-04-10-readme-rewrite-design.md  2026-04-17-phileas-stats-design.md
scripts/: archive_raw_dumps.py  bootstrap.py  demote_raw_memories.py  eval_recall.py  install-hooks.sh  migrate_v1.py  pre-commit  pre-push  probe_recall.py  probe_recall_live.py  simulate_life.py
src/phileas/: __init__.py  config.py  daemon.py  db.py  engine.py  engine_gather.py  graph.py  graph_proxy.py  hot.py  ingest.py  logging.py  migrate.py  models.py  reranker.py  scoring.py  server.py  systemd.py  vector.py
src/phileas/cli/: __init__.py  commands.py  formatter.py  wizard.py
src/phileas/hooks/: __init__.py  _client.py  cli.py  memorize.py  recall.py  session_start.py
src/phileas/llm/: __init__.py  consolidation.py  contradiction.py  extraction.py  fact_derivation.py  importance.py  inference.py  query_rewrite.py  referent_resolve.py  reflection.py  usage.py
src/phileas/stats/: __init__.py  cli.py  graph_probe.py  queries.py  render.py  time.py  writer.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon_cron.py  test_db.py  test_engine.py  test_graph.py  test_hot.py  test_inference.py  test_ingest.py  test_llm.py  test_migrate.py  test_models.py  test_recall_referent_integration.py  test_referent_resolve.py  test_reflection.py  test_scoring.py  test_server.py  test_stats_queries.py  test_stats_render.py  test_stats_time.py  test_stats_writer.py  test_vector.py  test_wizard.py
tests/eval/: README.md  compare.py  match.py  match_recall.py  reconcile.py  run_extraction.py  run_recall.py  sampler.py  snapshot_loader.py  test_match.py  test_match_recall.py
tests/eval/gold/: sampling.md
tests/eval/gold-recall/: README.md
web/: README.md  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/components/: daemon-status.tsx  day-nav.tsx  empty-state.tsx  entity-detail-view.tsx  entity-list-view.tsx  export-menu.tsx  forget-memory-dialog.tsx  (+6 more)
(+142 files in other folders)
