[project]
name = "phileas"
version = "0.0.0"
description = "Local-first AI companion memory infrastructure"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]",
    "sentence-transformers>=5.3.0",
    "chromadb>=1.0.0",
    "kuzu>=0.8.0",
    "litellm>=1.83.0",
    "click>=8.3.1",
    "rich>=14.3.3",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phileas"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
