[project]
name = "phileas-memory"
version = "0.1.0"
description = "Local-first long-term memory for AI companions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]",
    "sentence-transformers>=5.3.0",
    "chromadb>=1.0.0",
    "kuzu>=0.8.0",
    "litellm>=1.83.0",
    "click>=8.3.1",
    "rich>=14.3.3",
]

[project.urls]
Repository = "https://github.com/ajuno/phileas"

[project.scripts]
phileas = "phileas.cli:app"

[project.optional-dependencies]
embeddings = ["sentence-transformers"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phileas"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
